# text_based_engine

./: .gitignore  pyproject.toml
src/text_based_engine/: __init__.py  graph.py  parser.py  runner.py
tests/: test_parser.py
text_based_engine/: runner.py  user_input.py
