[project]
name = "text-based-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Robot8lover", email = "108429990+Robot8lover@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
